[package]
name = "stacker-rustmake"
version = "0.1.0"
authors = ["Quentin Gruber <quentingruber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
cgmath = "0.18.0"
raylib = "3.5.0"
structopt = "0.2"
